--- a/smb-core/pom.xml
+++ b/smb-core/pom.xml
@@ -33,7 +33,7 @@
 	</developers>
 	<scm>
 		<connection>scm:git:git://github.com/exense/smb/</connection>
-		<developerConnection>scm:git:ssh://github.com/exense/smb.git</developerConnection>
+		<developerConnection>scm:git:git://github.com/exense/smb.git</developerConnection>
 		<url>https://github.com/exense/smb/</url>
 	</scm>
 
