--- a/smb-core/pom.xml
+++ b/smb-core/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>io.denkbar.smb</groupId>
 	<artifactId>smb-core</artifactId>
-	<version>1.6</version>
+	<version>1.7-SNAPSHOT</version>
 
 	<name>SMB</name>
 	<description>
@@ -36,7 +36,7 @@
 		<connection>scm:git:https://github.com/exense/smb/</connection>
 		<developerConnection>scm:git:https://github.com/exense/smb.git</developerConnection>
 		<url>https://github.com/exense/smb/</url>
-		<tag>smb-core-1.6</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<properties>
