--- a/smb-core/pom.xml
+++ b/smb-core/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.denkbar.smb</groupId>
@@ -71,17 +73,14 @@
 	<build>
 		<plugins>
 			<!-- Deployment -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.sonatype.plugins</groupId> -->
-<!-- 				<artifactId>nexus-staging-maven-plugin</artifactId> -->
-<!-- 				<version>1.6.7</version> -->
-<!-- 				<extensions>true</extensions> -->
-<!-- 				<configuration> -->
-<!-- 					<serverId>ossrh</serverId> -->
-<!-- 					<nexusUrl>https://oss.sonatype.org/</nexusUrl> -->
-<!-- 					<autoReleaseAfterClose>false</autoReleaseAfterClose> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>3.0.1</version>
+				<configuration>
+					<tagNameFormat>@{project.version}</tagNameFormat>
+				</configuration>
+			</plugin>
 			<!-- Source -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -112,7 +111,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<profiles>
 		<profile>
 			<id>Default</id>
@@ -153,5 +152,5 @@
 			</build>
 		</profile>
 	</profiles>
-	
+
 </project>
