--- a/smb-core/pom.xml
+++ b/smb-core/pom.xml
@@ -32,27 +32,10 @@
 			<url>http://step.exense.ch/</url>
 		</developer>
 	</developers>
-	<scm>
-		<connection>scm:git:https://github.com/exense/smb/</connection>
-		<developerConnection>scm:git:https://github.com/exense/smb.git</developerConnection>
-		<url>https://github.com/exense/smb/</url>
-		<tag>1.8</tag>
-	</scm>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-
-	<distributionManagement>
-		<snapshotRepository>
-			<id>nexus-exense</id>
-			<url>https://nexus-enterprise.exense.ch/repository/exense/</url>
-		</snapshotRepository>
-		<repository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-		</repository>
-	</distributionManagement>
 
 	<dependencies>
 		<dependency>
@@ -70,26 +53,10 @@
 
 	<build>
 		<plugins>
-			<!-- Deployment -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.2</version>
-				<configuration>
-					<tagNameFormat>@{project.version}</tagNameFormat>
-				</configuration>
-			</plugin>
-			<!--  Release -->
-			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.6.7</version>
-				<extensions>true</extensions>
-				<configuration>
-					<serverId>ossrh</serverId>
-					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-					<autoReleaseAfterClose>true</autoReleaseAfterClose>
-				</configuration>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>3.0.0-M1</version>
 			</plugin>
 			<!-- Source -->
 			<plugin>
@@ -131,7 +98,7 @@
 			<!-- Local compilation - no signature -->
 		</profile>
 		<profile>
-			<id>Jenkins</id>
+			<id>DefaultBuild</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
