--- a/smb-core/pom.xml
+++ b/smb-core/pom.xml
@@ -31,7 +31,13 @@
 			<organizationUrl>http://exense.ch</organizationUrl>
 			<url>http://step.exense.ch/</url>
 		</developer>
-	</developers>
+	</developers>	
+  <scm>
+		<connection>scm:git:https://github.com/exense/smb/</connection>
+		<developerConnection>scm:git:https://github.com/exense/smb.git</developerConnection>
+		<url>https://github.com/exense/smb/</url>
+		<tag>1.8</tag>
+	</scm>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
