ORYON-75 PR feedback

--- a/smb-core/pom.xml
+++ b/smb-core/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>ch.exense.smb</groupId>
 	<artifactId>smb-core</artifactId>
-	<version>1.11</version>
+	<version>0.0.0-SNAPSHOT</version>
 
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>
